# arcade-visuals

./: .gitignore  animation.py  audio_server.py  client.py  ngon_polar.py  parameters.py  pointcloud.py  requirements.txt  server.py  state.py  sun.py
arcade-visuals-control/: Cargo.toml
arcade-visuals-control/src/: main.rs
lib/: audio_client.py  parameters.py  parameters_client.py  point_cloud.py  random_interpolator.py  utils.py
rust-visuals/: Cargo.toml  flake.nix
rust-visuals/.cargo/: config.toml
rust-visuals/src/: lib.rs  parameters.rs
