[package]
name = "rust-visuals"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
audio = "0.2.0"

eframe = { version = "0.28.1", default-features = false, features = [ "glow" ] }
ndarray = "0.16.1"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
