[package]
name = "rust-visuals"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controlpad"
path = "src/controlpad.rs"
required-features = ["controlpad"]

[[bin]]
name = "animation"
path = "src/animation.rs"
required-features = ["animation"]

[[bin]]
name = "audio"
path = "src/audio.rs"
required-features = ["audio"]

[dependencies]
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

egui = { version = "0.28.1", optional = true }
eframe = { version = "0.28.1", default-features = false, features = [ "glow" ], optional = true }
audio = { version = "0.2.0", optional = true }
ndarray = { version = "0.16.1", optional = true }

[features]
controlpad = ["egui", "eframe"]
animation = ["egui", "eframe", "ndarray"]
audio = ["dep:audio"]
